# ddd-clean-architecture-python

./: Dockerfile.grpc  Dockerfile.grpc.dockerignore  Dockerfile.rest  Dockerfile.rest.dockerignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  renovate.json  security_updates.list
.github/workflows/: ci.yaml
docs/: directory_structure.md  domain_models.md  ioc_container.md  sequence_diagrams.md
rest_api/models/: base_request.py  base_response.py
rest_api/models/healthz/: __init__.py  healthz_get_response.py
rest_api/models/tasks/patch/: task_patch_request.py  task_patch_response.py
src/: grpc_client.py  grpc_server.py  gunicorn.conf.py
src/_grpc/: __init__.pyi  todo_pb2.py  todo_pb2.pyi  todo_pb2_grpc.py  todo_pb2_grpc.pyi
src/custom_pydantic/: config.py  model.py
src/grpc_protos/: todo.proto
src/rest_api/: main.py
src/rest_api/models/: base_request.py  base_response.py
src/rest_api/models/tasks/: __init__.py
src/rest_api/models/tasks/commons/: task_data.py
src/rest_api/models/tasks/delete/: task_delete_request.py  task_delete_response.py
src/rest_api/models/tasks/get/: task_get_response.py
src/rest_api/models/tasks/patch/: task_patch_request.py
src/rest_api/models/tasks/post/: task_post_request.py  task_post_response.py
src/todo/application/abc/: __init__.py  abc_input_data.py  abc_interactor.py  abc_output_data.py
src/todo/application/tasks/: __init__.py  if_task_query_service.py
src/todo/application/tasks/commons/: task_data.py
src/todo/application/tasks/delete/: __init__.py  task_delete_interactor.py
src/todo/application/tasks/get_all/: __init__.py  task_get_all_interactor.py  task_get_all_output_data.py
src/todo/application/tasks/get_by_id/: __init__.py  task_get_by_id_interactor.py  task_get_by_id_output_data.py
src/todo/application/tasks/register/: __init__.py  task_register_interactor.py  task_register_output_data.py
src/todo/application/tasks/update/: task_update_input_data.py  task_update_interactor.py  task_update_output_data.py
src/todo/config/: task_settings.py
src/todo/domain/models/: base_model.py
src/todo/domain/models/tasks/: __init__.py  task.py  task_id.py  task_name.py
src/todo/infrastructure/in_memory/tasks/: in_memory_task_factory.py  in_memory_task_query_service.py  in_memory_task_repository.py
src/todo/injector/: injector.py  interactor_bus.py  task_module.py
tests/test_300_interface/: conftest.py  test_300_01_healthz.py
todo/application/tasks/commons/: task_data.py
todo/application/tasks/delete/: task_delete_input_data.py  task_delete_interactor.py  task_delete_output_data.py
todo/application/tasks/get_all/: task_get_all_input_data.py  task_get_all_interactor.py
todo/application/tasks/get_by_id/: task_get_by_id_input_data.py  task_get_by_id_interactor.py
todo/application/tasks/register/: task_register_input_data.py
todo/application/tasks/update/: __init__.py
todo/domain/models/tasks/: if_task_factory.py  if_task_repository.py  task.py  task_status.py
todo/infrastructure/in_memory/tasks/: __init__.py  in_memory_data.py
todo/injector/: exc.py  task_module.py
