[tool.poetry]
name = "msa-backend-todo"
version = "0.1.0"
description = ""
authors = ["koei-kaji <koei.kaji@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
gunicorn = "^20.1.0"
fastapi = "^0.85.0"
pydantic = "^1.9.1"
injector = "^0.20.1"
requests = "^2.28.1"
grpcio-tools = "^1.48.1"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
isort = "*"
black = "*"
pytest-cov = "*"
pylint = "*"
coverage-badge = "*"
mypy-protobuf = "^3.2.0"
protoletariat = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# NOTE: Black compatible configurations
# https://black.readthedocs.io/en/stable/compatible_configs.html#isort
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

# NOTE: Black compatible configurations
# https://black.readthedocs.io/en/stable/compatible_configs.html#pylint
[tool.pylint.messages_control]
disable = ["C0330", "C0326"]
extension-pkg-whitelist = "pydantic"

# NOTE: Black compatible configurations
# https://black.readthedocs.io/en/stable/compatible_configs.html#pylint
[tool.pylint.format]
max-line-length = 88

# https://docs.pytest.org/en/stable/customize.html#pyproject-toml
[tool.pytest.ini_options]
addopts = "-rsxX -s -x -v --cov --cov-report=html"