[project]
name = "ddd-clean-archtecture-python"
version = "0.1.0"
description = ""
authors = [
    { name = "koei-kaji", email = "koei.kaji@gmail.com" }
]
dependencies = [
    "fastapi>=0.103.1",
    "uvicorn[standard]>=0.23.2",
    "gunicorn>=21.2.0",
    "pydantic>=2.3.0",
    "injector>=0.21.0",
    "requests>=2.31.0",
    "grpcio-tools>=1.58.0",
    "protobuf>=4.24.3",
    "httpx>=0.25.0",
    "pydantic-settings>=2.0.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.2",
    "mypy>=1.5.1",
    "isort>=5.12.0",
    "black>=23.9.1",
    "pytest-cov>=4.1.0",
    "pylint>=2.17.5",
    "coverage-badge>=1.1.0",
    "mypy-protobuf>=3.5.0",
    "protoletariat>=3.2.19",
]

[tool.hatch.metadata]
allow-direct-references = true

# NOTE: Black compatible configurations
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = ["C0330", "C0326"]
extension-pkg-whitelist = "pydantic"

[tool.pylint.format]
max-line-length = 88
ignored-modules= ["_grpc"]

# https://docs.pytest.org/en/stable/customize.html#pyproject-toml
[tool.pytest.ini_options]
addopts = "-rsxX -s -x -v --cov --cov-report=html"
